--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
-    "mongoose-unique-validator": "^4.0.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "sharp": "^0.34.5"
   }
 }
